force-app/main/default/objects/Account/fields/Check_1__c.field-meta.xml
<CustomField>
    <fullName>Check_1__c</fullName>
    <label>Check 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>