force-app/main/default/objects/Account/fields/Check_2__c.field-meta.xml
<CustomField>
    <fullName>Check_2__c</fullName>
    <label>Check 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>