force-app/main/default/objects/Account/fields/Check_if_true__c.field-meta.xml
<CustomField>
    <fullName>Check_if_true__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if true</label>
    <type>Checkbox</type>
</CustomField>