force-app/main/default/objects/Account/fields/Checkig__c.field-meta.xml
<CustomField>
    <fullName>Checkig__c</fullName>
    <label>Checkig</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Check  1</fullName>
            </value>
            <value>
                <fullName>Check 2</fullName>
            </value>
            <value>
                <fullName>Check 3</fullName>
            </value>
            <value>
                <fullName>Check 4</fullName>
            </value>
            <value>
                <fullName>Check  5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>