force-app/main/default/objects/Account/fields/Checking_for_errors__c.field-meta.xml
<CustomField>
    <fullName>Checking_for_errors__c</fullName>
    <label>Checking for errors</label>
    <length>50</length>
    <type>Text</type>
</CustomField>