force-app/main/default/objects/Account/fields/devops_technologies__c.field-meta.xml
<CustomField>
    <fullName>devops_technologies__c</fullName>
    <label>devops technologies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Autorabit</fullName>
            </value>
            <value>
                <fullName>Git</fullName>
            </value>
            <value>
                <fullName>Sfdx</fullName>
            </value>
            <value>
                <fullName>Ant</fullName>
            </value>
            <value>
                <fullName>Workbench</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>