force-app/main/default/objects/Account/fields/Fruits__c.field-meta.xml
<CustomField>
    <fullName>Fruits__c</fullName>
    <label>Fruits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Mango</fullName>
            </value>
            <value>
                <fullName>Pineapple</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>