force-app/main/default/objects/Account/fields/Fruits_For_People__c.field-meta.xml
<CustomField>
    <fullName>Fruits_For_People__c</fullName>
    <label>Fruits For People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>banana</fullName>
            </value>
            <value>
                <fullName>apple</fullName>
            </value>
            <value>
                <fullName>keera</fullName>
            </value>
            <value>
                <fullName>grapes</fullName>
            </value>
            <value>
                <fullName>mango</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>