force-app/main/default/objects/Account/fields/Hello_There__c.field-meta.xml
<CustomField>
    <fullName>Hello_There__c</fullName>
    <label>Hello There</label>
    <length>50</length>
    <type>Text</type>
</CustomField>