force-app/main/default/objects/Account/fields/lerning_autorabit__c.field-meta.xml
<CustomField>
    <fullName>lerning_autorabit__c</fullName>
    <label>lerning autorabit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>