force-app/main/default/objects/Account/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <label>Technologies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Autorabit</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
                <isActive>false</isActive>
                <label>Java</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <isActive>false</isActive>
                <label>Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>