force-app/main/default/objects/Account/recordTypes/check.recordType-meta.xml
<RecordType>
    <fullName>check</fullName>
    <active>true</active>
    <label>check</label>
</RecordType>