force-app/main/default/objects/Account/recordTypes/check3.recordType-meta.xml
<RecordType>
    <fullName>check3</fullName>
    <active>true</active>
    <label>check3</label>
</RecordType>