force-app/main/default/objects/Account/recordTypes/Check_1.recordType-meta.xml
<RecordType>
    <fullName>Check_1</fullName>
    <active>true</active>
    <label>Check 1</label>
</RecordType>