force-app/main/default/objects/Account/recordTypes/check_2.recordType-meta.xml
<RecordType>
    <fullName>check_2</fullName>
    <active>true</active>
    <label>check 2</label>
</RecordType>