force-app/main/default/objects/Account/recordTypes/devops_technologies.recordType-meta.xml
<RecordType>
    <fullName>devops_technologies</fullName>
    <active>true</active>
    <label>devops technologies</label>
</RecordType>