force-app/main/default/objects/Account/recordTypes/Fruits.recordType-meta.xml
<RecordType>
    <fullName>Fruits</fullName>
    <active>true</active>
    <label>Fruits</label>
</RecordType>