force-app/main/default/objects/Account/recordTypes/Fruits_for_people.recordType-meta.xml
<RecordType>
    <fullName>Fruits_for_people</fullName>
    <active>true</active>
    <label>Fruits for people</label>
</RecordType>