force-app/main/default/objects/Account/recordTypes/Technologies_1.recordType-meta.xml
<RecordType>
    <fullName>Technologies_1</fullName>
    <active>true</active>
    <label>Technologies 1</label>
</RecordType>