force-app/main/default/objects/Account/recordTypes/Technologies_2.recordType-meta.xml
<RecordType>
    <fullName>Technologies_2</fullName>
    <active>true</active>
    <label>Technologies 2</label>
</RecordType>